examples/test/testpolicy17115.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17115
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key26: value38
      key5: value38
      key25: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value34
          key48: value44
          key17: value30
